// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColorScheme() > returns the correct values 1`] = `
{
  "contrastColors": [
    {
      "background": "#11160e",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#12170b",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#4d492d",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#6a623e",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#81754b",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#938558",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#a29362",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#b09f6c",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#bdaa76",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#c5b584",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#2d0b06",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#892212",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#ae3b24",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#c55037",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#cd6953",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#d37c69",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#d98c7b",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#de9b8c",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#e2a89b",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#0f170b",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#344f20",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#4e6a33",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#657d4d",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#778d63",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#879975",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#95a585",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#a2b093",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#adbaa0",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#19160c",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#504827",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#5e6633",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#627e3d",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#748e53",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#859b68",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#93a679",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#a0b18a",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#acbb98",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#0e1807",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#394d38",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#51675d",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#647a78",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#73898f",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#8097a2",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#8fa3ae",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#9caeb8",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#a9b8c1",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#16150b",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#50482f",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#725e4e",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#8b6f66",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#a07d79",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#b28a89",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#c29498",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#caa1a5",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#d1adb0",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#131716",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#3e4b47",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#556560",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#647a73",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#708b83",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#7b9a90",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#85a79d",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#8eb3a7",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#9bbdb2",
        },
      ],
    },
    {
      "name": "orange",
      "values": [
        {
          "contrast": 1,
          "name": "orange100",
          "value": "#1a1509",
        },
        {
          "contrast": 2,
          "name": "orange200",
          "value": "#57461f",
        },
        {
          "contrast": 3,
          "name": "orange300",
          "value": "#775e2a",
        },
        {
          "contrast": 4,
          "name": "orange400",
          "value": "#8f7132",
        },
        {
          "contrast": 5,
          "name": "orange500",
          "value": "#a28139",
        },
        {
          "contrast": 6,
          "name": "orange600",
          "value": "#b38e3f",
        },
        {
          "contrast": 7,
          "name": "orange700",
          "value": "#c29a45",
        },
        {
          "contrast": 8,
          "name": "orange800",
          "value": "#caa65a",
        },
        {
          "contrast": 9,
          "name": "orange900",
          "value": "#d1b26f",
        },
      ],
    },
  ],
  "terminal": [
    "#11160e",
    "#892212",
    "#344f20",
    "#504827",
    "#394d38",
    "#50482f",
    "#3e4b47",
    "#6a623e",
    "#4d492d",
    "#d37c69",
    "#879975",
    "#859b68",
    "#8097a2",
    "#b28a89",
    "#7b9a90",
    "#a29362",
  ],
}
`;

exports[`generateColorScheme() > returns the correct values 2`] = `
{
  "contrastColors": [
    {
      "background": "#12130c",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#13140c",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#494739",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#646150",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#787560",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#88856e",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#959374",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#9fa174",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#a8ae79",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#b1b890",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#28080a",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#881d23",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#b32f3b",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#c94754",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#d1616c",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#d7757f",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#dc868f",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#e0959d",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#e4a3aa",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#131413",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#444845",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#5d625f",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#6e7670",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#7c877d",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#89958a",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#94a294",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#9eae9e",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#a9b8a9",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#13130e",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#474835",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#61624f",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#747563",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#858575",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#939384",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#9f9f92",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#aaaa9f",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#b4b5aa",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#1c1207",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#58432a",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#725d43",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#84715a",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#92826d",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#9e907e",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#a99c8c",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#b4a89a",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#bcb2a6",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#1b120a",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#613f30",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#85544c",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#a16362",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#b77173",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#c57f84",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#cc8e93",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#d29c9f",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#d8a8ac",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#101513",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#3d4946",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#566361",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#697775",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#788787",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#869595",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#92a1a1",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#9facac",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#aab6b6",
        },
      ],
    },
    {
      "name": "orange",
      "values": [
        {
          "contrast": 1,
          "name": "orange100",
          "value": "#1c110a",
        },
        {
          "contrast": 2,
          "name": "orange200",
          "value": "#633f22",
        },
        {
          "contrast": 3,
          "name": "orange300",
          "value": "#87552f",
        },
        {
          "contrast": 4,
          "name": "orange400",
          "value": "#a26638",
        },
        {
          "contrast": 5,
          "name": "orange500",
          "value": "#b97440",
        },
        {
          "contrast": 6,
          "name": "orange600",
          "value": "#c58451",
        },
        {
          "contrast": 7,
          "name": "orange700",
          "value": "#cc9265",
        },
        {
          "contrast": 8,
          "name": "orange800",
          "value": "#d29f78",
        },
        {
          "contrast": 9,
          "name": "orange900",
          "value": "#d8ab89",
        },
      ],
    },
  ],
  "terminal": [
    "#12130c",
    "#881d23",
    "#444845",
    "#474835",
    "#58432a",
    "#613f30",
    "#3d4946",
    "#646150",
    "#494739",
    "#d7757f",
    "#89958a",
    "#939384",
    "#9e907e",
    "#c57f84",
    "#869595",
    "#959374",
  ],
}
`;
